force-app/main/default/objects/Coverage_Team__c/Coverage_Team__c.object-meta.xml
<CustomObject>
    <description>Custom object to track officer coverage on accounts.</description>
    <label>Coverage Team</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Coverage #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverage Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>