force-app/main/default/objects/Coverage_Team__c/fields/Activity_Level__c.field-meta.xml
<CustomField>
    <fullName>Activity_Level__c</fullName>
    <label>Activity Level</label>
    <length>40</length>
    <type>Text</type>
</CustomField>