force-app/main/default/objects/Coverage_Team__c/fields/Arranged_by_R_D__c.field-meta.xml
<CustomField>
    <fullName>Arranged_by_R_D__c</fullName>
    <label>Contacted by ACE Development</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>