force-app/main/default/objects/Coverage_Team__c/fields/CASESAFEIDCoverageTeam__c.field-meta.xml
<CustomField>
    <fullName>CASESAFEIDCoverageTeam__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>CASESAFEID (Coverage Team)</label>
    <type>Text</type>
</CustomField>