force-app/main/default/objects/Coverage_Team__c/fields/Company_Coverage_Status__c.field-meta.xml
<CustomField>
    <fullName>Company_Coverage_Status__c</fullName>
    <label>Company Coverage Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Qualified Lead</fullName>
            </value>
            <value>
                <fullName>Warm Lead</fullName>
            </value>
            <value>
                <fullName>Leads to Qualify</fullName>
            </value>
            <value>
                <fullName>Keep In Touch</fullName>
            </value>
            <value>
                <fullName>Not Worth Calling</fullName>
            </value>
            <value>
                <fullName>Pitched - Declined Mandate</fullName>
            </value>
            <value>
                <fullName>Pitched - Decision On Hold</fullName>
            </value>
            <value>
                <fullName>Pitched - Lost</fullName>
            </value>
            <value>
                <fullName>No Pitch - Hired Another Bank</fullName>
            </value>
            <value>
                <fullName>No Pitch - Acquired</fullName>
            </value>
            <value>
                <fullName>No Pitch - Filed S1/Intending To Go Public</fullName>
            </value>
            <value>
                <fullName>Client - On Hold Future Opportunity</fullName>
            </value>
            <value>
                <fullName>Client - On Hold In Tail</fullName>
            </value>
            <value>
                <fullName>Client - Former</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Strategic Buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>