force-app/main/default/objects/Coverage_Team__c/fields/Coverage_Level__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Level__c</fullName>
    <label>Coverage Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sponsor Officer</fullName>
            </value>
            <value>
                <fullName>Support Sponsor Officer</fullName>
            </value>
            <value>
                <fullName>Calling Officer</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>