force-app/main/default/objects/Coverage_Team__c/fields/Coverage_Team_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Team_ID_c__c</fullName>
    <description>Unique identifier for Coverage teams</description>
    <label>Coverage Team ID</label>
    <type>AutoNumber</type>
</CustomField>