force-app/main/default/objects/Coverage_Team__c/fields/Coverage_Team_Status__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Team_Status__c</fullName>
    <label>Coverage Team Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>