force-app/main/default/objects/Coverage_Team__c/fields/Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADG</fullName>
            </value>
            <value>
                <fullName>Aerospace Defense and Government</fullName>
            </value>
            <value>
                <fullName>Alternative Investor</fullName>
            </value>
            <value>
                <fullName>Asia Coverage</fullName>
            </value>
            <value>
                <fullName>Building Products</fullName>
            </value>
            <value>
                <fullName>Business Services</fullName>
            </value>
            <value>
                <fullName>Business Services - 2015</fullName>
            </value>
            <value>
                <fullName>Cannabis</fullName>
            </value>
            <value>
                <fullName>CAPE</fullName>
            </value>
            <value>
                <fullName>Chemical Initiative</fullName>
            </value>
            <value>
                <fullName>Collateralized Loan Obligation</fullName>
            </value>
            <value>
                <fullName>Consumer Food &amp; Retail</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Credit Fund</fullName>
            </value>
            <value>
                <fullName>CVAS</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>EU Capital Markets</fullName>
            </value>
            <value>
                <fullName>EU FR</fullName>
            </value>
            <value>
                <fullName>EU IFA</fullName>
            </value>
            <value>
                <fullName>Family Office</fullName>
            </value>
            <value>
                <fullName>FIG</fullName>
            </value>
            <value>
                <fullName>Fintech</fullName>
            </value>
            <value>
                <fullName>Firm-Wide</fullName>
            </value>
            <value>
                <fullName>FVA Coverage</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>HC</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Healthcare - 2015</fullName>
            </value>
            <value>
                <fullName>Hedge Fund</fullName>
            </value>
            <value>
                <fullName>High Yield</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>