force-app/main/default/objects/Coverage_Team__c/fields/CoverageTypeLookup__c.field-meta.xml
<CustomField>
    <fullName>CoverageTypeLookup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Coverage Type (Lookup)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SectorValue__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>SectorValue__c.DependencyValue__c</field>
            <operation>equals</operation>
            <value>Type</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SectorValue__c</referenceTo>
    <relationshipLabel>Coverage Team</relationshipLabel>
    <relationshipName>Coverage_Team1</relationshipName>
    <type>Lookup</type>
</CustomField>