force-app/main/default/objects/Coverage_Team__c/fields/DA_Company_Type__c.field-meta.xml
<CustomField>
    <fullName>DA_Company_Type__c</fullName>
    <label>Data Analytics Company Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data &amp; Analytics</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Events, Exhibitions and Meetings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>