force-app/main/default/objects/Coverage_Team__c/fields/Data_Analytics_Company_Overview__c.field-meta.xml
<CustomField>
    <fullName>Data_Analytics_Company_Overview__c</fullName>
    <label>Data Analytics Company Overview</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2.010 - Company &amp; Market Intelligence General</fullName>
            </value>
            <value>
                <fullName>2.011 - Company &amp; Market Intelligence - Corporate Data</fullName>
            </value>
            <value>
                <fullName>2.012 - Company &amp; Market Intelligence - Credit Data</fullName>
            </value>
            <value>
                <fullName>2.013 - Company &amp; Market Intelligence - Economic Analysis</fullName>
            </value>
            <value>
                <fullName>2.014 - Company &amp; Market Intelligence - Political Risk</fullName>
            </value>
            <value>
                <fullName>2.015 - Company &amp; Market Intelligence - Expert Networks</fullName>
            </value>
            <value>
                <fullName>2.016 - Company &amp; Market Intelligence - Market Intelligence</fullName>
            </value>
            <value>
                <fullName>2.020 - Education Software &amp; Content - General</fullName>
            </value>
            <value>
                <fullName>2.021 - Education Software &amp; Content - K12</fullName>
            </value>
            <value>
                <fullName>2.022 - Education Software &amp; Content – Higher Education</fullName>
            </value>
            <value>
                <fullName>2.023 - Education Software &amp; Content - Professional Training</fullName>
            </value>
            <value>
                <fullName>2.024 - Education Software &amp; Content - Vocational Training</fullName>
            </value>
            <value>
                <fullName>2.030 - Energy &amp; Commodities General</fullName>
            </value>
            <value>
                <fullName>2.031 - Energy &amp; Commodities - Agriculture</fullName>
            </value>
            <value>
                <fullName>2.032 - Energy &amp; Commodities - Chemicals</fullName>
            </value>
            <value>
                <fullName>2.033 - Energy &amp; Commodities - ETRM</fullName>
            </value>
            <value>
                <fullName>2.034 - Energy &amp; Commodities - Metals &amp; Mining</fullName>
            </value>
            <value>
                <fullName>2.035 - Energy &amp; Commodities - Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>2.036 - Energy &amp; Commodities - Renewables, Greentech &amp; Weather</fullName>
            </value>
            <value>
                <fullName>2.037 - Energy &amp; Commodities - Utilities &amp; Energy Management</fullName>
            </value>
            <value>
                <fullName>2.038 - Energy &amp; Commodities - Water</fullName>
            </value>
            <value>
                <fullName>2.040 - Engineering &amp; Construction General</fullName>
            </value>
            <value>
                <fullName>2.041 - Engineering &amp; Construction - Construction</fullName>
            </value>
            <value>
                <fullName>2.042 - Engineering &amp; Construction - Engineering</fullName>
            </value>
            <value>
                <fullName>2.050 - Financial &amp; Insurance General</fullName>
            </value>
            <value>
                <fullName>2.051 - Financial &amp; Insurance - Asset Management</fullName>
            </value>
            <value>
                <fullName>2.052 - Financial &amp; Insurance - Compliance</fullName>
            </value>
            <value>
                <fullName>2.053 - Financial &amp; Insurance - Insurance</fullName>
            </value>
            <value>
                <fullName>2.054 - Financial &amp; Insurance - Payments</fullName>
            </value>
            <value>
                <fullName>2.055 - Financial &amp; Insurance - Portfolio Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>