force-app/main/default/objects/Coverage_Team__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>