force-app/main/default/objects/Coverage_Team__c/fields/Estimated_EV_MM__c.field-meta.xml
<CustomField>
    <fullName>Estimated_EV_MM__c</fullName>
    <inlineHelpText>The default currency is your local currency. To change default currency click edit at the top of the page.</inlineHelpText>
    <label>Estimated EV (MM)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>