force-app/main/default/objects/Coverage_Team__c/fields/Expected_Products__c.field-meta.xml
<CustomField>
    <fullName>Expected_Products__c</fullName>
    <label>Expected Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Buyside</fullName>
            </value>
            <value>
                <fullName>Continuation Fund</fullName>
            </value>
            <value>
                <fullName>DCM</fullName>
            </value>
            <value>
                <fullName>De-SPAC</fullName>
            </value>
            <value>
                <fullName>ECM</fullName>
            </value>
            <value>
                <fullName>Financing</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>FVA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sellside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>