force-app/main/default/objects/Coverage_Team__c/fields/Initiative__c.field-meta.xml
<CustomField>
    <fullName>Initiative__c</fullName>
    <inlineHelpText>Select the Initiative for this Coverage</inlineHelpText>
    <label>Initiative</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nifty 50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>