force-app/main/default/objects/Coverage_Team__c/fields/Intro_Conversation_Occurred_Date__c.field-meta.xml
<CustomField>
    <fullName>Intro_Conversation_Occurred_Date__c</fullName>
    <label>ACE Dev Intro Call Occurred On</label>
    <type>Date</type>
</CustomField>