force-app/main/default/objects/Coverage_Team__c/fields/Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity__c</fullName>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>