force-app/main/default/objects/Coverage_Team__c/fields/Last_Activity_on_Account__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_on_Account__c</fullName>
    <formula>Company__r.LastActivityDate</formula>
    <label>Last Activity on Account</label>
    <type>Date</type>
</CustomField>