force-app/main/default/objects/Coverage_Team__c/fields/Lead_Generation_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Generation_Status__c</fullName>
    <label>Lead Generation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profiling - Leave</fullName>
            </value>
            <value>
                <fullName>Profiling - Need</fullName>
            </value>
            <value>
                <fullName>Profiling - Priority</fullName>
            </value>
            <value>
                <fullName>Profiling - In Process</fullName>
            </value>
            <value>
                <fullName>Profiling - Done</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Contacting</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Failed to Contact</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>