force-app/main/default/objects/Coverage_Team__c/fields/Lead_Investors__c.field-meta.xml
<CustomField>
    <fullName>Lead_Investors__c</fullName>
    <label>Lead Investors</label>
    <type>TextArea</type>
</CustomField>