force-app/main/default/objects/Coverage_Team__c/fields/Legacy_Sector__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Sector__c</fullName>
    <label>Legacy Sector</label>
    <type>TextArea</type>
</CustomField>