force-app/main/default/objects/Coverage_Team__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <formula>TEXT( Officer__r.Line_of_Business__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Officer LOB</label>
    <type>Text</type>
</CustomField>