force-app/main/default/objects/Coverage_Team__c/fields/MasterList_Date__c.field-meta.xml
<CustomField>
    <fullName>MasterList_Date__c</fullName>
    <label>MasterList Date</label>
    <type>Date</type>
</CustomField>