force-app/main/default/objects/Coverage_Team__c/fields/Officer__c.field-meta.xml
<CustomField>
    <fullName>Officer__c</fullName>
    <label>Officer</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 4) OR (1 AND 2 AND 3)</booleanFilter>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Houlihan_Employee</value>
        </filterItems>
        <filterItems>
            <field>Contact.Industry_Group__c</field>
            <operation>equals</operation>
            <value>FS - Financial Sponsors</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>FS Coverage Team Member</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Standard Coverage Team Member</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Coverage Team</relationshipLabel>
    <relationshipName>Accounts_Coverage</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>