force-app/main/default/objects/Coverage_Team__c/fields/Officer_is_Running_User__c.field-meta.xml
<CustomField>
    <fullName>Officer_is_Running_User__c</fullName>
    <formula>IF(  Officer__r.User__r.Id = $User.Id, TRUE, FALSE)</formula>
    <label>Officer is Running User</label>
    <type>Checkbox</type>
</CustomField>