force-app/main/default/objects/Coverage_Team__c/fields/Officer_Name__c.field-meta.xml
<CustomField>
    <fullName>Officer_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id , Officer__r.FirstName+&quot; &quot;+Officer__r.LastName, &apos;_parent&apos;)</formula>
    <label>Officer Name</label>
    <type>Text</type>
</CustomField>