force-app/main/default/objects/Coverage_Team__c/fields/OptOutAN__c.field-meta.xml
<CustomField>
    <fullName>OptOutAN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used when a Covering Officer wishes to Opt-Out of receiving the Primary and all sub-related accounts&apos; activity notifications.</description>
    <label>Opt-Out (Activity Notifications)</label>
    <type>Checkbox</type>
</CustomField>