force-app/main/default/objects/Coverage_Team__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <formula>TEXT(Company__r.Ownership)</formula>
    <label>Ownership</label>
    <type>Text</type>
</CustomField>