force-app/main/default/objects/Coverage_Team__c/fields/Primary_Sector__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sector__c</fullName>
    <label>Primary Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic &amp; Research, IP &amp; Legal</fullName>
            </value>
            <value>
                <fullName>Ad Tech</fullName>
            </value>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>AM - Allocator</fullName>
            </value>
            <value>
                <fullName>AM - Alternatives</fullName>
            </value>
            <value>
                <fullName>AM - Other</fullName>
            </value>
            <value>
                <fullName>AM - Traditional</fullName>
            </value>
            <value>
                <fullName>Automotive, Transportation &amp; Logistics</fullName>
            </value>
            <value>
                <fullName>Automotive &amp; Transportation</fullName>
            </value>
            <value>
                <fullName>Auxiliary</fullName>
            </value>
            <value>
                <fullName>Bank / Broker-Dealer</fullName>
            </value>
            <value>
                <fullName>Blockchain</fullName>
            </value>
            <value>
                <fullName>Broadcast Technology/Media Services</fullName>
            </value>
            <value>
                <fullName>Building Products</fullName>
            </value>
            <value>
                <fullName>Business Process Outsourcing (BPO)</fullName>
            </value>
            <value>
                <fullName>Canadian LP</fullName>
            </value>
            <value>
                <fullName>Capital Goods</fullName>
            </value>
            <value>
                <fullName>Capital Shortfall</fullName>
            </value>
            <value>
                <fullName>CBD</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Cloud Services / Infrastructure</fullName>
            </value>
            <value>
                <fullName>Commercial Real Estate</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Communications &amp; Collaboration Software</fullName>
            </value>
            <value>
                <fullName>Company &amp; Market Intelligence</fullName>
            </value>
            <value>
                <fullName>Concentration Risk</fullName>
            </value>
            <value>
                <fullName>Consumer Internet Services</fullName>
            </value>
            <value>
                <fullName>Content Management/Enterprise Workflow</fullName>
            </value>
            <value>
                <fullName>Corporates</fullName>
            </value>
            <value>
                <fullName>CRE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>