force-app/main/default/objects/Coverage_Team__c/fields/PrimarySectorLookup__c.field-meta.xml
<CustomField>
    <fullName>PrimarySectorLookup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Sector (Lookup)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SectorValue__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>SectorValue__c.DependencyValue__c</field>
            <operation>equals</operation>
            <value>Primary</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SectorValue__c</referenceTo>
    <relationshipLabel>Coverage Team (Primary Sector (Lookup))</relationshipLabel>
    <relationshipName>Coverage_Team2</relationshipName>
    <type>Lookup</type>
</CustomField>