force-app/main/default/objects/Coverage_Team__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>Highest (Pitch in less than 6 months)
High (Pitch 6-12 months)
Medium (Pitch 12-24 months)
Low (Pitch +24 months)</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Highest</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>No Need To Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>