force-app/main/default/objects/Coverage_Team__c/fields/Product_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Product_Specialty__c</fullName>
    <formula>TEXT( Officer__r.Product_Specialty__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Specialty</label>
    <type>Text</type>
</CustomField>