force-app/main/default/objects/Coverage_Team__c/fields/Profile_Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Profile_Date_Completed__c</fullName>
    <label>ACE Dev Intro Call Booked On</label>
    <type>Date</type>
</CustomField>