force-app/main/default/objects/Coverage_Team__c/fields/Profile_Status__c.field-meta.xml
<CustomField>
    <fullName>Profile_Status__c</fullName>
    <label>Profile Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>High Priority</fullName>
            </value>
            <value>
                <fullName>Leave</fullName>
            </value>
            <value>
                <fullName>Need</fullName>
            </value>
            <value>
                <fullName>Priority</fullName>
            </value>
            <value>
                <fullName>Refresh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>