force-app/main/default/objects/Coverage_Team__c/fields/SecondarySectorLookup__c.field-meta.xml
<CustomField>
    <fullName>SecondarySectorLookup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Secondary Sector (Lookup)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SectorValue__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>SectorValue__c.DependencyValue__c</field>
            <operation>equals</operation>
            <value>Secondary</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SectorValue__c</referenceTo>
    <relationshipLabel>Coverage Team (Secondary Sector (Lookup))</relationshipLabel>
    <relationshipName>Coverage_Team3</relationshipName>
    <type>Lookup</type>
</CustomField>