force-app/main/default/objects/Coverage_Team__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Filed S1 and/or Intending to go Public</fullName>
            </value>
            <value>
                <fullName>Former Client</fullName>
            </value>
            <value>
                <fullName>Client Hold - Out of Tail</fullName>
            </value>
            <value>
                <fullName>Client Hold - Future Opportunity</fullName>
            </value>
            <value>
                <fullName>Not Worth Calling</fullName>
            </value>
            <value>
                <fullName>Keep in Touch</fullName>
            </value>
            <value>
                <fullName>Lead to Qualify</fullName>
            </value>
            <value>
                <fullName>Warm Lead</fullName>
            </value>
            <value>
                <fullName>Qualified Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>