force-app/main/default/objects/Coverage_Team__c/fields/Target_Engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Engagement_Date__c</fullName>
    <label>Expected Pitch Date</label>
    <type>Date</type>
</CustomField>