force-app/main/default/objects/Coverage_Team__c/fields/Target_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Transaction_Date__c</fullName>
    <label>Target Transaction Date</label>
    <type>Date</type>
</CustomField>